@@ -2,64 +2,72 @@ package com.femt.citas_reservacion_sistema_backend.service.imp;
 
 import com.femt.citas_reservacion_sistema_backend.dto.MedicoDTO;
 import com.femt.citas_reservacion_sistema_backend.mapper.MedicoMapper;
+import com.femt.citas_reservacion_sistema_backend.repository.MedicoEspecialidadRepository;
 import com.femt.citas_reservacion_sistema_backend.repository.MedicoRepository;
 import com.femt.citas_reservacion_sistema_backend.service.MedicoService;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
 
 @Service
 public class MedicoServiceImp implements MedicoService {
+    private final MedicoRepository medicoRepository;
+    private final MedicoEspecialidadRepository medicoEspecialidadRepository;
+    private final MedicoMapper medicoMapper;
 
-    @Autowired
-    private MedicoRepository medicoRepository;
-    @Autowired
-    private MedicoMapper medicoMapper;
-
-    @Override
-    public List<MedicoDTO> obtenerMedicosPorEspecialidad(Long especialidadId) {
-        return medicoMapper.toDTOList(medicoRepository.findByEspecialidadId(especialidadId));
+    public MedicoServiceImp(MedicoRepository medicoRepository,
+            MedicoEspecialidadRepository medicoEspecialidadRepository, MedicoMapper medicoMapper) {
+        this.medicoRepository = medicoRepository;
+        this.medicoEspecialidadRepository = medicoEspecialidadRepository;
+        this.medicoMapper = medicoMapper;
     }
 
     @Override
     public List<MedicoDTO> listaMedicos() throws Exception {
-        return medicoRepository.findAll().stream()
-                .map(medicoMapper::toDTO)
-                .collect(Collectors.toList());
+        return this.medicoRepository.findAll().stream()
+                .map(medicoMapper::toDTO).toList();
     }
 
     @Override
     public Optional<MedicoDTO> obtenerMedicoPorId(Long id) throws Exception {
-        return medicoRepository.findById(id).map(medicoMapper::toDTO);
+        return this.medicoRepository.findById(id)
+                .map(medicoMapper::toDTO);
     }
 
     @Override
     public void guardarMedico(MedicoDTO medicoRequest) throws Exception {
-        try {
-            this.medicoRepository.save(medicoMapper.toEntity(medicoRequest));
-        } catch (Exception e) {
-            throw new Exception(e.getMessage());
-        }
+        this.medicoRepository.save(medicoMapper.toEntity(medicoRequest));
     }
 
     @Override
     public void eliminarMedico(Long id) throws Exception {
-        try {
-            this.medicoRepository.deleteById(id);
-        } catch (Exception e) {
-            throw new Exception("No se puede eliminar al medico: " + e.getMessage());
-        }
+        this.medicoRepository.deleteById(id);
     }
 
     @Override
     public void actualizarMedico(MedicoDTO medicoRequest) throws Exception {
-        try {
-            this.medicoRepository.save(medicoMapper.toEntity(medicoRequest));
-        } catch (Exception e) {
-            throw new Exception(e.getMessage());
-        }
+        this.medicoRepository.save(medicoMapper.toEntity(medicoRequest));
+    }
+
+    @Override
+    public List<String> obtenerEspecialidadesMedico(Long medicoId) {
+        return this.medicoEspecialidadRepository.findEspecialidadesPorMedico(medicoId);
+    }
+
+    @Override
+    public Optional<MedicoDTO> obtenerMedicoConEspecialidades(Long medicoId) throws Exception {
+        var optionalMedico = medicoRepository.findById(medicoId);
+        if (optionalMedico.isEmpty())
+            return Optional.empty();
+
+        var medico = optionalMedico.get();
+        var especialidades = medicoEspecialidadRepository.findEspecialidadesPorMedico(medicoId);
+
+        MedicoDTO dto = medicoMapper.toDTO(medico);
+        dto.setEspecialidades(especialidades);
+
+        return Optional.of(dto);
     }
 }
